# wurstminebot-discord

./: .env  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
assets/: deploy.ps1  pre-commit.ps1  wurstminebot.service
crate/wurstminebot/: Cargo.toml
crate/wurstminebot-cli/: Cargo.toml
crate/wurstminebot-cli/src/: main.rs
crate/wurstminebot-ipc/: Cargo.toml
crate/wurstminebot-ipc/src/: lib.rs
crate/wurstminebot-python/: Cargo.toml
crate/wurstminebot-python/src/: lib.rs
crate/wurstminebot/src/: cal.rs  commands.rs  config.rs  emoji.rs  http.rs  ipc.rs  lib.rs  log.rs  minecraft.rs  parse.rs  people.rs  twitch.rs  util.rs  voice.rs
src/: commands.rs  emoji.rs  lib.rs  log.rs  main.rs  minecraft.rs  parse.rs  people.rs  schema.rs  twitch.rs  util.rs  voice.rs
