[package]
name = "wurstminebot"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[lib]
name = "wurstminebot"
path = "src/lib.rs"

[[bin]]
name = "wurstminebot"
path = "src/main.rs"
doc = false
test = false
bench = false

[dependencies]
chrono = "0.4"
itertools = "0.9"
lazy_static = "1"
pin-utils = "0.1"
rand = "0.7"
regex = "1"
serde_json = "1"
serenity = "0.8"
typemap = "0.3"
uuid = "0.8"
whoami = "0.8"

[dependencies.chase]
version = "0.1"
features = ["stream"]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.diesel]
version = "1"
features = ["postgres", "serde_json"]

[dependencies.futures]
version = "0.3"
features = ["compat"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.shlex]
git = "https://github.com/fenhl/rust-shlex"

[dependencies.systemd_minecraft]
git = "https://github.com/wurstmineberg/systemd-minecraft"
branch = "riir"
package = "minecraft"

[dependencies.tokio]
version = "0.2"
features = ["fs", "macros", "rt-threaded"]

[dependencies.twitchchat]
version = "0.11"
default-features = false
features = ["async", "tokio_rustls"]
