[package]
name = "wurstminebot-cli"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[[bin]]
name = "wurstminebot"
path = "src/main.rs"

[dependencies]
serenity = "0.10"

[dependencies.diesel] #TODO use something async instead?
version = "1"
features = ["postgres", "serde_json"]

[dependencies.minecraft]
git = "https://github.com/wurstmineberg/rust-minecraft-types"
branch = "main"

[dependencies.serenity-utils]
#git = "https://github.com/fenhl/serenity-utils" #TODO publish to crates.io
#branch = "main"
path = "C:\\Users\\fenhl\\git\\github.com\\fenhl\\serenity-utils\\stage\\crate\\serenity-utils" #TODO push changes

[dependencies.systemd_minecraft]
git = "https://github.com/wurstmineberg/systemd-minecraft"
branch = "riir"
package = "minecraft"

[dependencies.tokio]
version = "1.3"
features = ["fs", "macros", "rt-multi-thread"]

[dependencies.wurstminebot]
path = "../wurstminebot"
