[package]
name = "wurstminebot-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "wurstminebot"
path = "src/main.rs"

[dependencies]
itertools = "0.10"
rcon = "0.6"
serde_json = "1"
serenity = "0.11"

[dependencies.discord-message-parser]
git = "https://github.com/fenhl/discord-message-parser"
branch = "main"

[dependencies.minecraft]
git = "https://github.com/wurstmineberg/rust-minecraft-types"
branch = "main"

[dependencies.serenity-utils]
git = "https://github.com/fenhl/serenity-utils" #TODO publish to crates.io?
branch = "main"

[dependencies.sqlx]
version = "0.6"
features = ["postgres", "runtime-tokio-rustls"]

[dependencies.systemd_minecraft]
git = "https://github.com/wurstmineberg/systemd-minecraft"
branch = "riir"
package = "minecraft"

[dependencies.tokio]
version = "1.3"
features = ["fs", "macros", "process", "rt-multi-thread", "time"]

[dependencies.wurstminebot]
path = "../wurstminebot"
