[package]
name = "wurstminebot-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "wurstminebot"
path = "src/main.rs"

[dependencies]
discord-message-parser = { git = "https://github.com/fenhl/discord-message-parser", branch = "main" }
itertools = "0.14"
minecraft = { git = "https://github.com/wurstmineberg/rust-minecraft-types", branch = "main" }
rand = "0.8"
rcon = "0.6"
serde_json = "1"
serenity = "0.12"
serenity-utils = { git = "https://github.com/fenhl/serenity-utils", branch = "main" } #TODO publish to crates.io?
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls-ring-webpki"] }
systemd_minecraft = { git = "https://github.com/wurstmineberg/systemd-minecraft", branch = "riir", package = "minecraft" }
tokio = { version = "1.3", features = ["fs", "macros", "parking_lot", "process", "rt-multi-thread", "time"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", package = "wheel" }
wurstminebot = { path = "../wurstminebot" }
