[package]
name = "wurstminebot-ipc"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[dependencies]
serenity = "0.10"

[dependencies.wurstminebot]
path = "../wurstminebot"

[dependencies.serenity-utils]
git = "https://github.com/fenhl/serenity-utils" #TODO publish to crates.io?
branch = "main"
