[package]
name = "wurstminebot-ipc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
serenity = "0.12"

[dependencies.wurstminebot]
path = "../wurstminebot"

[dependencies.serenity-utils]
git = "https://github.com/fenhl/serenity-utils" #TODO publish to crates.io?
branch = "main"
