[package]
name = "wurstminebot-python"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lib]
name = "wurstminebot"
crate-type = ["cdylib"]

[dependencies.wurstminebot-ipc]
path = "../wurstminebot-ipc"

[dependencies.pyo3]
version = "0.17"
features = ["extension-module"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["model", "rustls_backend", "utils"]
