[package]
name = "wurstminebot-python"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "wurstminebot"
crate-type = ["cdylib"]

[dependencies.wurstminebot-ipc]
path = "../wurstminebot-ipc"

[dependencies.pyo3]
version = "0.17"
features = ["extension-module"]

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["model", "rustls_backend", "utils"]
