[package]
name = "wurstminebot"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[dependencies]
chrono = "0.4"
futures = "0.3"
ics = "0.5"
itertools = "0.12"
lazy-regex = "3"
rcon = "0.6"
rocket = "0.5"
serde_json = "1" #TODO make sure enabling the arbitrary_precision feature doesn't break anything
serenity = "0.12"
thiserror = "1"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.minecraft]
git = "https://github.com/wurstmineberg/rust-minecraft-types"
branch = "main"

[dependencies.rocket-util]
git = "https://github.com/fenhl/rocket-util"
branch = "main"
features = ["ics"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serenity-utils]
git = "https://github.com/fenhl/serenity-utils" #TODO publish to crates.io?
branch = "main"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["chrono", "json", "macros", "postgres", "runtime-tokio-rustls"]

[dependencies.systemd_minecraft]
git = "https://github.com/wurstmineberg/systemd-minecraft"
branch = "riir"
package = "minecraft"

[dependencies.tokio]
version = "1.3"
features = ["fs", "macros", "parking_lot", "sync", "rt-multi-thread"]

[dependencies.twitch-irc]
version = "5"
default-features = false
features = ["transport-tcp-rustls-webpki-roots"]

[dependencies.twitch_helix]
git = "https://github.com/fenhl/rust-twitch-helix" #TODO publish to crates.io
branch = "main"

[target.'cfg(unix)'.dependencies]
regex = "1"

[target.'cfg(unix)'.dependencies.async_zip]
version = "0.0.16"
features = ["full"]

[target.'cfg(unix)'.dependencies.chase]
version = "0.1"
features = ["stream"]

[target.'cfg(unix)'.dependencies.futures]
version = "0.3"
features = ["compat"]

[target.'cfg(unix)'.dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "trust-dns"]

[target.'cfg(unix)'.dependencies.tokio-stream]
version = "0.1"
features = ["io-util"]

[target.'cfg(unix)'.dependencies.tokio-util]
version = "0.7"
features = ["io"]

[target.'cfg(unix)'.dependencies.url]
version = "2"
features = ["serde"]

[target.'cfg(unix)'.dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
features = ["reqwest", "serde", "serde_json"]
